# labs_16

./: CMakeLists.txt  main.c  task_3.c  tasks.c  tasks_2.c
